A fix for scrollbar

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -148,7 +148,6 @@
   }
   .slick-track{
 	   display: block;
-     min-height: 500px;
      .slick-slide{
        img{
          display: block;
